k8s/dev/deployment.yaml
# 配置部署信息
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: game
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: game
    spec:
      containers:
      - name: game
        image: reg.miz.so/bob/remoteserver:jenkins
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        imagePullPolicy: Always
        ports:
        - containerPort: 8083
        volumeMounts:
        - mountPath: /data/logs
          name: game-volume
        command: ["/bin/sh","-c"] #自定义命令
        args: ["nohup ./game -conf ./config/deve"]
      volumes:
      - hostPath:
          path: /data/logs
        name: game-volume
